{{$NEXT}}

1.47   2018-02-18

- DateTime::Duration->multiply now only allows integer
  multipliers. Implemented by Dan Stewart. PR #73.


1.46   2018-02-11

- Fixed the formatting for the CLDR "S" symbol. It could in some cases round
  _up_ to 1 instead of truncating a value. For example, the "SSS" symbol would
  format 999,999,999 nanoseconds as "1.000". Fixed by Gianni Ceccarelli. PR
  #71.


1.45    2017-12-26

- Added month_length(), quarter_length() and year_length()
  methods. Implemented by Dan Stewart. PR #70.


1.44   2017-08-20

- Added a stringify() method. This does exactly the same thing as
  stringification overloading does. GH #58.

- Added an is_last_day_of_month() method to indicate whether or not an object
  falls on the last day of its month. GH #60.


1.43   2017-05-29

- Added a small optimization for boolification overloading. Rather than
  relying on a fallback to stringification, we now return true directly, which
  is a little faster in cases like "if ($might_be_dt) { ... }".

- The datetime() method now accepts a single argument to use as the separate
  between the date and time portion. This defaults to "T".


1.42   2016-12-25

- The DateTime::Duration->add and ->subtract methods now accept
  DateTime::Duration objects. This used to work by accident, but this is now
  done intentionally (with docs and tests). Reported by Petr Pisar. GitHub
  #50.


1.41   2016-11-16

- The DateTime->add and ->subtract methods now accept DateTime::Duration
  objects. This used to work by accident, but this is now done intentionally
  (with docs and tests). Based on PR #45 from Sam Kington.


1.40   2016-11-12

- Switched from RT to the GitHub issue tracker.


1.39   2016-09-17

- Bump minimum required Perl to 5.8.4 from 5.8.1. Looking at CPAN Testers,
  this distro hasn't actually passed with earlier Perl versions since
  1.35. I'm not explicitly testing with anything earlier than 5.8.8


1.38   2016-09-16
